Mon Oct 04 11:24:51 1999  George Lebl  <jirka@5z.com>

	* gnome-i18n.c: in case the aliases would have a real infinite
	  loop of the kind a=b, b=a, give up after 50 lookups

1999-09-29  Elliot Lee  <sopwith@redhat.com>

	* gnome-exec.c: Fix strange race condition. I don't think pipes
 	are persistent across multiple forks() - in this case the child
 	was closing the read end of the pipe, and the child of the child
 	was getting SIGPIPE even though the parent had the fd open still.

Sun Sep 26 10:37:26 1999  George Lebl  <jirka@5z.com>

	* gnome-i18n.c from KUSANO Takayuki <AE5T-KSN@asahi-net.or.jp> to
	  avoid infinite loops in alias lookup

1999-09-21  Federico Mena Quintero  <federico@redhat.com>

	* gnome-i18n.c (gnome_i18n_init): Take out the patch for the
	umpteenth time.  As was discussed on gnome-hackers, it is
	Wrong(tm) to set an arbitrary default value for LC_ALL.

1999-09-19  Owen Taylor  <otaylor@redhat.com>

	* gnome-exec.c (gnome_execute_async_with_env_fds): Return
	  -1 in case of failure. Also, some code cleanups.

1999-09-17  Anders Carlsson  <anders.carlsson@tordata.se>

	* gnome-i18n.c (gnome_i18n_init): Set LC_CTYPE to en_US if it isn't
	  already set. This prevents falling back to the "C" locale which
	  doesn't support 8-bit characters

Mon Sep 13 22:01:29 1999  George Lebl  <jirka@5z.com>

	* gnome-i18n.c: gnome_i18n_get_language_list now also tries to
	  figure out aliases by reading in alias files from some standard
	  locations

1999-09-08  Martin Baulig  <martin@home-of-linux.org>

	* gnome-triggers.h (GnomeTriggerType, _GnomeTriggerType):
	Use `typedef enum { ... } GnomeTriggerType' instead of
 	`typedef enum _GnomeTriggerType { ... } GnomeTriggerType'.

1999-09-01  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-dentry.c (gnome_desktop_entry_load_flags_conditional): 
	default type to Directory for KDE dentries.  Unfortunately for
	directories, they do not specify the Type (at least for KDE 1.1.1)