@@ -41,7 +41,6 @@ static char *
 unalias_lang (char *lang)
 {
   char *p;
-  int i;
   if (!alias_table)
     {
       read_aliases ("/usr/share/locale/locale.alias");
@@ -49,18 +48,8 @@ unalias_lang (char *lang)
       read_aliases ("/usr/lib/X11/locale/locale.alias");
       read_aliases ("/usr/openwin/lib/locale/locale.alias");
     }
-  i = 0;
   while ((p=g_hash_table_lookup(alias_table,lang)) && strcmp(p, lang))
-    {
       lang = p;
-      /*if we go more then 50 levels, something is wrong*/
-      if (i++>=50)
-        {
-	  g_warning (_("Probably an infinite loop in locale alises, "
-		       "I give up"));
-	  break;
-	}
-    }
   return lang;
 }
 
