@@ -1,3 +1,6 @@
+1999-10-04  Elliot Lee  <sopwith@redhat.com>
+	* gnome-i18n.c: Revert a bugnum-less commit.
+	
 Mon Oct 04 11:24:51 1999  George Lebl  <jirka@5z.com>
 
 	* gnome-i18n.c: in case the aliases would have a real infinite
